# satysfi-azmath

./: HISTORY.md  README.md  Satyristes  commands.md  satysfi-azmath-doc.opam  satysfi-azmath.opam
.github/ISSUE_TEMPLATE/: command-function-request.md
doc/: azmath.saty
src/: accent.satyh  azmath.satyh  equation.satyh  matrices.satyh  operator.satyh  parens.satyh  unicode-math.satyh  util.satyh
src/common/: counter.satyh  matrix.satyh  param.satyh
