opam-version: "2.0"
name: "satysfi-azmath-doc"
version: "0.0.3"
synopsis: "A SATySFi package containing A-to-Z mathematical commands"
description: """A SATySFi package containing A-to-Z mathematical commands."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-azmath"
bug-reports: "https://github.com/monaqa/satysfi-azmath/issues"
dev-repo: "git+https://github.com/monaqa/satysfi-azmath.git"

depends: [
  "satysfi" {>= "0.0.6" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-azmath" {= "%{version}%"}
  "satysfi-enumitem" {>= "3.0.0" & < "4.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "azmath-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "azmath-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
